--- a/index.html
+++ b/index.html
@@ -196,15 +196,6 @@
                     <p class="notice__tittle">Chờ duyệt</p>
                     <p class="notice__main-text">Có 19 phiếu nhập hàng cần duyệt</p>
                 </div>
-
-            </div>
-            <hr style="margin-top: 10px; margin-bottom: 20px;" />
-            <div class="notice__header history__header">
-                <div class="notice__header__text">
-                    <p style="font-size: 20px; font-weight: bold;">Hoạt Động Gần Đây</p>
-                </div>
-            </div>
-            <div class="notice__main">
                 <div class="notice notice1">
                     <p class="notice__tittle">Nhập kho</p>
                     <p class="notice__main-text">Đã thêm 2 bộ thực hành điện vào kho</p>
@@ -231,7 +222,136 @@
                 </div>
 
             </div>
+            <hr style="margin-top: 10px; margin-bottom: 10px;" />
+            <div class="quick-actions">
+                <div class="quick__header">
+                    <div class="quick__header__text">
+                        <p style="font-size: 20px; font-weight: bold;">Thao Tác Nhanh</p>
+                    </div>
+                </div>
+                <div class="quick__main">
+                    <div class="quick quick__notice">
+                        <i class="fa-solid fa-plus"></i>
+                        <a href="#">Thêm báo cáo mới</a>
+                    </div>
+                    <div class=" quick quick__add">
+                        <i class="fa-solid fa-receipt"></i>
+                        <a href="#">Tạo phiếu nhập</a>
+                    </div>
+                    <div class=" quick quick__export">
+                        <i class="fa-solid fa-receipt"></i>
+                        <a href="#">Tạo phiếu xuất</a>
+                    </div>
+                    <div class="quick quick__view">
+                        <i class="fa-solid fa-list"></i>
+                        <a href="#">Danh sách vật tư</a>
+                    </div>
+                    <div class="quick quick_users">
+                        <i class="fa-solid fa-user"></i>
+                        <a href="#">Người dùng</a>
+                    </div>
+                    <div class="quick switch-wrapper-ios">
+                        <input class="tgl-ios ios" id="switch-ios" type="checkbox" />
+                        <label class="tgl-btn-ios" for="switch-ios"></label>
+                        <p style="font-size: 12px;">Đổi giao diện</p>
+                    </div>
+                    
+                    <style>
+                        .switch-wrapper-ios .tgl-ios {
+                            display: none;
+                        }
+
+                        .switch-wrapper-ios,
+                        .switch-wrapper-ios *,
+                        .switch-wrapper-ios *:after,
+                        .switch-wrapper-ios *:before {
+                            box-sizing: border-box;
+                        }
+
+                        .switch-wrapper-ios .tgl-ios::selection,
+                        .switch-wrapper-ios .tgl-ios:after::selection,
+                        .switch-wrapper-ios .tgl-ios:before::selection,
+                        .switch-wrapper-ios .tgl-ios *::selection,
+                        .switch-wrapper-ios .tgl-ios *:after::selection,
+                        .switch-wrapper-ios .tgl-ios *:before::selection,
+                        .switch-wrapper-ios .tgl-ios+.tgl-btn-ios::selection {
+                            background: none;
+                        }
+
+                        .switch-wrapper-ios .tgl-ios+.tgl-btn-ios {
+                            outline: 0;
+                            display: block;
+                            width: 64px;
+                            height: 32px;
+                            position: relative;
+                            cursor: pointer;
+                            user-select: none;
+                        }
+
+                        .switch-wrapper-ios .tgl-ios+.tgl-btn-ios:after,
+                        .switch-wrapper-ios .tgl-ios+.tgl-btn-ios:before {
+                            position: relative;
+                            display: block;
+                            content: "";
+                            width: 50%;
+                            height: 100%;
+                        }
+
+                        .switch-wrapper-ios .tgl-ios+.tgl-btn-ios:after {
+                            left: 0;
+                        }
+
+                        .switch-wrapper-ios .tgl-ios+.tgl-btn-ios:before {
+                            display: none;
+                        }
+
+                        .switch-wrapper-ios .tgl-ios:checked+.tgl-btn-ios:after {
+                            left: 50%;
+                        }
+
+                        .switch-wrapper-ios .tgl-ios+.tgl-btn-ios {
+                            background: #fbfbfb;
+                            border-radius: 32px;
+                            padding: 2px;
+                            transition: all 0.4s ease;
+                            border: 1px solid #e8eae9;
+                        }
+
+                        .switch-wrapper-ios .tgl-ios+.tgl-btn-ios:after {
+                            border-radius: 32px;
+                            background: #fbfbfb;
+                            transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.3s ease, margin 0.3s ease;
+                            box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 4px 0 rgba(0, 0, 0, 0.08);
+                        }
+
+                        .switch-wrapper-ios .tgl-ios+.tgl-btn-ios:hover:after {
+                            will-change: padding;
+                        }
+
+                        .switch-wrapper-ios .tgl-ios+.tgl-btn-ios:active {
+                            box-shadow: inset 0 0 0 32px #e8eae9;
+                        }
+
+                        .switch-wrapper-ios .tgl-ios+.tgl-btn-ios:active:after {
+                            padding-right: 12.8px;
+                        }
+
+                        .switch-wrapper-ios .tgl-ios:checked+.tgl-btn-ios {
+                            background: #256176;
+                        }
+
+                        .switch-wrapper-ios .tgl-ios:checked+.tgl-btn-ios:active {
+                            box-shadow: none;
+                        }
+
+                        .switch-wrapper-ios .tgl-ios:checked+.tgl-btn-ios:active:after {
+                            margin-left: -12.8px;
+                        }
+                    </style>
+                </div class="quick__main">
+            </div>
         </div>
+
     </main>
 
     <script src="./script/index.js"></script>
