--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <li class="drop-down" id="dropDown3"><a href="#">Thiết bị/Dụng cụ</a></li>
                     <li class="drop-down" id="dropDown4"><a href="#">Người dùng</a></li>
                     <li class="drop-down" id="dropDown5"><a href="#">Báo cáo</a></li>
-                    <li class="drop-down" id="dropDown6"><a href="#">Hệ thống</a></li>
-                    <li class="drop-down" id="dropDown7"><a href="#">Liên hệ/Trợ giúp</a></li>
+                    <li class="drop-down" id="dropDown6"><a href="#">Liên hệ/Trợ giúp</a></li>
+
                 </ul>
             </div>
             <div class="header__find-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
@@ -62,12 +62,6 @@
                 <li><a href="#">Xuất file Excel/PDF</a></li>
             </ul>
             <ul class="drop-content-6">
-                <li><a href="#">Quản lý dữ liệu</a></li>
-                <li><a href="#">Phân quyền truy cập</a></li>
-                <li><a href="#">Cấu hình kho/danh mục chính</a></li>
-                <li><a href="#">Dọn dẹp/sao lưu dữ liệu</a></li>
-            </ul>
-            <ul class="drop-content-7">
                 <li><a href="#">Liên hệ ban quản trị</a></li>
                 <li><a href="#">Hướng dẫn sử dụng</a></li>
                 <li><a href="#">Câu hỏi thường gặp (FAQ)</a></li>
@@ -351,7 +345,12 @@
                 </div class="quick__main">
             </div>
         </div>
-
+        <div class="chart-cards">
+            <div class="chart chart-1">
+                <canvas id="chart1" width="300" height="200"></canvas>
+            </div>
+            <div class="chart chart-2"></div>
+        </div>
     </main>
 
     <script src="./script/index.js"></script>
