--- a/kho.html
+++ b/kho.html
@@ -23,8 +23,8 @@
                     <li class="drop-down" id="dropDown3"><a href="#">Thiết bị/Dụng cụ</a></li>
                     <li class="drop-down" id="dropDown4"><a href="#">Người dùng</a></li>
                     <li class="drop-down" id="dropDown5"><a href="#">Báo cáo</a></li>
-                    <li class="drop-down" id="dropDown6"><a href="#">Hệ thống</a></li>
-                    <li class="drop-down" id="dropDown7"><a href="#">Liên hệ/Trợ giúp</a></li>
+                    <li class="drop-down" id="dropDown6"><a href="#">Liên hệ/Trợ giúp</a></li>
+
                 </ul>
             </div>
             <div class="header__find-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
@@ -62,18 +62,32 @@
                 <li><a href="#">Xuất file Excel/PDF</a></li>
             </ul>
             <ul class="drop-content-6">
-                <li><a href="#">Quản lý dữ liệu</a></li>
-                <li><a href="#">Phân quyền truy cập</a></li>
-                <li><a href="#">Cấu hình kho/danh mục chính</a></li>
-                <li><a href="#">Dọn dẹp/sao lưu dữ liệu</a></li>
-            </ul>
-            <ul class="drop-content-7">
                 <li><a href="#">Liên hệ ban quản trị</a></li>
                 <li><a href="#">Hướng dẫn sử dụng</a></li>
                 <li><a href="#">Câu hỏi thường gặp (FAQ)</a></li>
             </ul>
         </div>
     </header>
+
+    <main>
+        <div class="dashboard">
+            <p class="board__header">Quản Lý</p>
+            <hr style="margin: 10px 0;" />
+            <div class="board__main">
+                <ul>
+                    <li><a href="#">Danh sách vật tư</a>
+                        <ul class="list">
+                            <li>Máy tính</li>
+                            <li>Bàn - Ghế</li>
+                            <li></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Thêm vật tư mới</a></li>
+                    <li><a href="#">Điều chuyển vật tư</a></li>
+                </ul>
+            </div>
+        </div>
+    </main>
     <script src="./script/kho.js"></script>
 </body>
 
