them bang danh sach

--- a/kho.html
+++ b/kho.html
@@ -34,7 +34,7 @@
         <div class="drop-box" id="box1">
             <ul class="drop-content-1">
                 <li><a href="#">Giới thiệu hệ thống</a></li>
-                <li><a href="#sumCards">Thống kê tổng quan</a></li>
+                <li><a href="index.html">Thống kê tổng quan</a></li>
                 <li><a href="#">Thông báo</a></li>
             </ul>
             <ul class="drop-content-2">
@@ -77,15 +77,22 @@
                 <ul>
                     <li><a href="#">Danh sách vật tư</a>
                         <ul class="list">
-                            <li>Máy tính</li>
-                            <li>Bàn - Ghế</li>
-                            <li></li>
+                            <li><a href="#">Máy tính</a></li>
+                            <li><a href="#">Bàn - Ghế</a></li>
+                            <li><a href="#"><a href="#">Dụng cụ điện</a></a></li>
+                            <li><a href="#">Dụng cụ hoá học</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Thêm vật tư mới</a></li>
                     <li><a href="#">Điều chuyển vật tư</a></li>
                 </ul>
             </div>
+        </div>
+        <div class="main__box">
+            <div class="main__box__header">
+                <p style="font-weight: bold; font-size: 25px;">Danh Sách Vật Tư</p>
+            </div>
+            <hr style="margin: 10px 0;" />
         </div>
     </main>
     <script src="./script/kho.js"></script>
