sua ten file home

--- a/kho.html
+++ b/kho.html
@@ -18,7 +18,7 @@
             <a href="index.html" class="header__logo">UNETI</a>
             <div class="header__menu">
                 <ul>
-                    <li class="drop-down" id="dropDown1"><a href="./index.html">Trang chủ</a> </li>
+                    <li class="drop-down" id="dropDown1"><a href="./home.html">Trang chủ</a> </li>
                     <li class="drop-down" id="dropDown2"><a href="./kho.html">Kho vật tư</a></li>
                     <li class="drop-down" id="dropDown3"><a href="#">Thiết bị/Dụng cụ</a></li>
                     <li class="drop-down" id="dropDown4"><a href="#">Người dùng</a></li>
