--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./asset/index.css">
+    <link rel="stylesheet" href="./asset/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/2.0.7/countUp.min.js"></script>
 
@@ -18,7 +18,7 @@
             <a href="index.html" class="header__logo">UNETI</a>
             <div class="header__menu">
                 <ul>
-                    <li class="drop-down" id="dropDown1"><a href="./index.html">Trang chủ</a> </li>
+                    <li class="drop-down" id="dropDown1"><a href="./home.html">Trang chủ</a> </li>
                     <li class="drop-down" id="dropDown2"><a href="./kho.html">Kho vật tư</a></li>
                     <li class="drop-down" id="dropDown3"><a href="#">Thiết bị/Dụng cụ</a></li>
                     <li class="drop-down" id="dropDown4"><a href="#">Người dùng</a></li>
@@ -353,7 +353,7 @@
         </div>
     </main>
 
-    <script src="./script/index.js"></script>
+    <script src="./script/home.js"></script>
 </body>
 
 </html>
