--- a/repo/kho.html
+++ b/repo/kho.html
@@ -17,11 +17,11 @@
     <img src="./img/logo.png" alt="png" class="watermark" />
     <header>
       <div class="header__container">
-        <a href="../home/index.html" class="header__logo">UNETI</a>
+        <a href="../index.html" class="header__logo">UNETI</a>
         <div class="header__menu">
           <ul>
             <li class="drop-down" id="dropDown1">
-              <a href="../home/index.html">Trang chủ</a>
+              <a href="../index.html">Trang chủ</a>
             </li>
             <li class="drop-down" id="dropDown2">
               <a href="./kho.html">Kho vật tư</a>
