--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./home/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/2.0.7/countUp.min.js"></script>
 
@@ -18,8 +18,8 @@
             <a href="index.html" class="header__logo">UNETI</a>
             <div class="header__menu">
                 <ul>
-                    <li class="drop-down" id="dropDown1"><a href="./index.html">Trang chủ</a> </li>
-                    <li class="drop-down" id="dropDown2"><a href="../repo/kho.html">Kho vật tư</a></li>
+                    <li class="drop-down" id="dropDown1"><a href="index.html">Trang chủ</a> </li>
+                    <li class="drop-down" id="dropDown2"><a href="./repo/kho.html">Kho vật tư</a></li>
                     <li class="drop-down" id="dropDown3"><a href="#">Thiết bị/Dụng cụ</a></li>
                     <li class="drop-down" id="dropDown4"><a href="#">Người dùng</a></li>
                     <li class="drop-down" id="dropDown5"><a href="#">Báo cáo</a></li>
@@ -353,7 +353,7 @@
         </div>
     </main>
 
-    <script src="./index.js"></script>
+    <script src="./home/index.js"></script>
 </body>
 
 </html>
