--- a/repo/kho.html
+++ b/repo/kho.html
@@ -46,7 +46,7 @@
       <div class="drop-box" id="box1">
         <ul class="drop-content-1">
           <li><a href="#">Giới thiệu hệ thống</a></li>
-          <li><a href="index.html">Thống kê tổng quan</a></li>
+          <li><a href="../index.html">Thống kê tổng quan</a></li>
           <li><a href="#">Thông báo</a></li>
         </ul>
         <ul class="drop-content-2">
